--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.12",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack-cli": "^4.2.0"
