--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/dat.gui": "^0.7.6",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
     "@types/three": "^0.103.2",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
     "dat.gui": "^0.7.7",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-react": "^7.21.5",
     "express": "^4.17.1",
     "jsm": "^0.0.1",
     "lodash": "^4.17.20",
@@ -34,12 +32,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "three": "^0.123.0",
-    "typescript-eslint-parser": "^22.0.0",
     "webpack": "^5.11.0"
   },
   "devDependencies": {
@@ -47,6 +44,15 @@
     "@types/react-redux": "^7.1.12",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-thunk": "^1.0.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack-cli": "^4.2.0"
