make windows draggable by the topbar

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/d3": "^6.2.0",
+    "@types/d3-drag": "^2.0.0",
     "@types/dat.gui": "^0.7.6",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
     "@types/three": "^0.103.2",
     "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
+    "d3": "5.16.0",
     "dat.gui": "^0.7.7",
     "express": "^4.17.1",
     "jsm": "^0.0.1",
